@@ -1,21 +1,22 @@
 package com.smartstay.console.services;
 
 import com.smartstay.console.Mapper.orderHistory.OrderHistoryMapper;
-import com.smartstay.console.config.Authentication;
-import com.smartstay.console.config.RestTemplateLoggingInterceptor;
+import com.smartstay.console.config.*;
 import com.smartstay.console.dao.*;
+import com.smartstay.console.dto.files.FileData;
 import com.smartstay.console.dto.orderHistory.PaymentLinkGenerateDto;
 import com.smartstay.console.dto.orderHistory.PaymentLinkGenerateResDto;
+import com.smartstay.console.dto.subscription.SubscriptionSnapshot;
 import com.smartstay.console.ennum.*;
 import com.smartstay.console.payloads.orderHistory.PaymentLinkGeneratePayload;
 import com.smartstay.console.payloads.orderHistory.PaymentLinkSharePayload;
 import com.smartstay.console.repositories.OrderHistoryRepository;
-import com.smartstay.console.responses.orderHistory.GeneratePaymentLinkRes;
-import com.smartstay.console.responses.orderHistory.OrderHistoryResponse;
-import com.smartstay.console.responses.orderHistory.VerifyResponse;
+import com.smartstay.console.responses.orderHistory.*;
+import com.smartstay.console.utils.SnapshotUtility;
 import com.smartstay.console.utils.Utils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -24,6 +25,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.HttpServerErrorException;
 import org.springframework.web.client.RestTemplate;
+import org.springframework.web.multipart.MultipartFile;
 
 import java.time.LocalDate;
 import java.util.*;
@@ -50,6 +52,17 @@ public class OrderHistoryService {
     private UsersService usersService;
     @Autowired
     private WhatsappService whatsappService;
+    @Autowired
+    @Lazy
+    private SubscriptionService subscriptionService;
+    @Autowired
+    private UploadFileToS3 uploadFileToS3;
+    @Autowired
+    private AgentActivitiesService agentActivitiesService;
+    @Autowired
+    private S3Service s3Service;
+    @Autowired
+    private PdfService pdfService;
 
     @Value("${PAYMENT_URL}")
     private String paymentUrl;
@@ -79,13 +92,13 @@ public class OrderHistoryService {
         Set<String> filteredHostelIds = new HashSet<>();
         Set<String> filteredUserIds = new HashSet<>();
 
-        if (name != null && !name.trim().isEmpty()) {
-            List<HostelV1> filteredHostels = hostelService.getHostelsByHostelName(name);
+        if (name != null && !name.isBlank()) {
+            List<HostelV1> filteredHostels = hostelService.getHostelsByHostelName(name.trim());
             filteredHostelIds = filteredHostels.stream()
                     .map(HostelV1::getHostelId)
                     .collect(Collectors.toSet());
 
-            List<Users> filteredUsers = usersService.getUsersByName(name);
+            List<Users> filteredUsers = usersService.getUsersByName(name.trim());
             filteredUserIds = filteredUsers.stream()
                     .map(Users::getUserId)
                     .collect(Collectors.toSet());
@@ -115,36 +128,62 @@ public class OrderHistoryService {
         if (name != null && !name.trim().isEmpty()
                 && filteredHostelIds.isEmpty() && filteredUserIds.isEmpty()) {
 
-            return ResponseEntity.ok(Map.of(
-                    "orderHistories", Collections.emptyList(),
-                    "totalRevenue", totalRevenue,
-                    "currentPage", page + 1,
-                    "pageSize", size,
-                    "totalItems", 0,
-                    "totalPages", 0
-            ));
+            OrderHistoryPagedResponse response = new OrderHistoryPagedResponse(totalRevenue, page + 1,
+                    size, 0, 0, Collections.emptyList(), null, null);
+
+            return ResponseEntity.ok(response);
         }
 
-        Page<OrderHistory> paginatedOrderHistory;
+        Page<OrderHistory> paginatedAllOrderHistory;
+        Page<OrderHistory> paginatedPaidOrderHistory;
+        Page<OrderHistory> paginatedCreatedOrderHistory;
+
+        String paidOrderStatus = OrderStatus.PAID.name();
+        String createdOrderStatus = OrderStatus.CREATED.name();
 
         if (!filteredHostelIds.isEmpty() || !filteredUserIds.isEmpty()) {
-            paginatedOrderHistory = orderHistoryRepository
-                    .findFilteredOrderHistory(filteredHostelIds.isEmpty() ? null : filteredHostelIds,
-                            filteredUserIds.isEmpty() ? null : filteredUserIds, startDate, endDate, pageable);
+
+            filteredHostelIds = filteredHostelIds.isEmpty() ? null : filteredHostelIds;
+            filteredUserIds = filteredUserIds.isEmpty() ? null : filteredUserIds;
+
+            paginatedAllOrderHistory = orderHistoryRepository
+                    .findFilteredOrderHistory(filteredHostelIds, filteredUserIds, startDate, endDate,
+                            pageable);
+            paginatedPaidOrderHistory = orderHistoryRepository
+                    .findStatusFilteredOrderHistory(filteredHostelIds, filteredUserIds, startDate, endDate,
+                            paidOrderStatus, pageable);
+            paginatedCreatedOrderHistory = orderHistoryRepository
+                    .findStatusFilteredOrderHistory(filteredHostelIds, filteredUserIds, startDate, endDate,
+                            createdOrderStatus, pageable);
+
         } else {
-            paginatedOrderHistory = orderHistoryRepository
-                    .findAllByIsActiveTrueAndCreatedAtGreaterThanEqualAndCreatedAtLessThanOrderByCreatedAtDesc(
-                            startDate, endDate, pageable);
+            paginatedAllOrderHistory = orderHistoryRepository
+                    .findAllByPaidOrCreatedDate(startDate, endDate, pageable);
+            paginatedPaidOrderHistory = orderHistoryRepository
+                    .findStatusAllByPaidOrCreatedDate(startDate, endDate, paidOrderStatus, pageable);
+            paginatedCreatedOrderHistory = orderHistoryRepository
+                    .findStatusAllByPaidOrCreatedDate(startDate, endDate, createdOrderStatus, pageable);
         }
 
-        List<OrderHistory> orderHistories = paginatedOrderHistory.getContent();
+        List<OrderHistory> allOrderHistories = paginatedAllOrderHistory.getContent();
+        List<OrderHistory> paidOrderHistories = paginatedPaidOrderHistory.getContent();
+        List<OrderHistory> createdOrderHistories = paginatedCreatedOrderHistory.getContent();
 
+        List<OrderHistory> orderHistories = new ArrayList<>();
+        orderHistories.addAll(allOrderHistories);
+        orderHistories.addAll(paidOrderHistories);
+        orderHistories.addAll(createdOrderHistories);
+
+        Set<Long> historyIds = new HashSet<>();
         Set<String> hostelIds = new HashSet<>();
         Set<String> planCodes = new HashSet<>();
         Set<String> userIds = new HashSet<>();
         Set<String> agentIds = new HashSet<>();
 
         for (OrderHistory orderHistory : orderHistories) {
+            if (orderHistory.getHistoryId() != null) {
+                historyIds.add(orderHistory.getHistoryId());
+            }
             if (orderHistory.getHostelId() != null) {
                 hostelIds.add(orderHistory.getHostelId());
             }
@@ -165,6 +204,12 @@ public class OrderHistoryService {
                 }
             }
         }
+
+        List<Subscription> subscriptions = subscriptionService
+                .getSubscriptionsByOrderIds(historyIds);
+        Map<Long, Subscription> subscriptionMap = subscriptions.stream()
+                .collect(Collectors.toMap(Subscription::getOrderId, s -> s,
+                        (a, b) -> a));
 
         List<HotelType> hotelTypes = hotelTypeService.getAllHotelTypes();
         Map<Integer, HotelType> hotelTypeMap = hotelTypes.stream()
@@ -193,7 +238,44 @@ public class OrderHistoryService {
         Map<String, Users> ownerMap = owners.stream()
                 .collect(Collectors.toMap(Users::getParentId, user -> user, (a, b) -> a));
 
-        List<OrderHistoryResponse> responseList = orderHistories.stream()
+        List<OrderHistoryResponse> orderHistoriesRes = mapOrderHistories(allOrderHistories,
+                hostelMap, hotelTypeMap, plansMap, usersMap, agentMap, ownerMap, subscriptionMap);
+
+        List<OrderHistoryResponse> paidOrderHistoriesRes = mapOrderHistories(paidOrderHistories,
+                hostelMap, hotelTypeMap, plansMap, usersMap, agentMap, ownerMap, subscriptionMap);
+
+        List<OrderHistoryResponse> createdOrderHistoriesRes = mapOrderHistories(createdOrderHistories,
+                hostelMap, hotelTypeMap, plansMap, usersMap, agentMap, ownerMap, subscriptionMap);
+
+        StatusOrderHistoryPagedResponse paidHistories = new StatusOrderHistoryPagedResponse(
+                page + 1, size, paginatedPaidOrderHistory.getTotalElements(),
+                paginatedPaidOrderHistory.getTotalPages(), paidOrderHistoriesRes
+        );
+
+        StatusOrderHistoryPagedResponse createdHistories = new StatusOrderHistoryPagedResponse(
+                page + 1, size, paginatedCreatedOrderHistory.getTotalElements(),
+                paginatedCreatedOrderHistory.getTotalPages(), createdOrderHistoriesRes
+        );
+
+        OrderHistoryPagedResponse response = new OrderHistoryPagedResponse(
+                totalRevenue, page + 1, size, paginatedAllOrderHistory.getTotalElements(),
+                paginatedAllOrderHistory.getTotalPages(), orderHistoriesRes, paidHistories,
+                createdHistories
+        );
+
+        return new ResponseEntity<>(response, HttpStatus.OK);
+    }
+
+    private List<OrderHistoryResponse> mapOrderHistories(List<OrderHistory> orderHistories,
+                                                         Map<String, HostelV1> hostelMap,
+                                                         Map<Integer, HotelType> hotelTypeMap,
+                                                         Map<String, Plans> plansMap,
+                                                         Map<String, Users> usersMap,
+                                                         Map<String, Agent> agentMap,
+                                                         Map<String, Users> ownerMap,
+                                                         Map<Long, Subscription> subscriptionMap) {
+
+        return orderHistories.stream()
                 .map(orderHistory -> {
                     HostelV1 hostel = hostelMap.getOrDefault(orderHistory.getHostelId(), null);
                     Plans plan = plansMap.getOrDefault(orderHistory.getPlanCode(), null);
@@ -203,19 +285,10 @@ public class OrderHistoryService {
                         hotelType = hotelTypeMap.getOrDefault(hostel.getHostelType(), null);
                         owner = ownerMap.getOrDefault(hostel.getParentId(), null);
                     }
-                    return new OrderHistoryMapper(hostel, hotelType,
-                            plan, usersMap, agentMap, owner).apply(orderHistory);
+                    Subscription subscription = subscriptionMap.getOrDefault(orderHistory.getHistoryId(), null);
+                    return new OrderHistoryMapper(hostel, hotelType, plan, usersMap, agentMap,
+                            owner, subscription).apply(orderHistory);
                 }).toList();
-
-        Map<String, Object> response = new HashMap<>();
-        response.put("orderHistories", responseList);
-        response.put("totalRevenue", totalRevenue);
-        response.put("currentPage", page + 1);
-        response.put("pageSize", size);
-        response.put("totalItems", paginatedOrderHistory.getTotalElements());
-        response.put("totalPages", paginatedOrderHistory.getTotalPages());
-
-        return new ResponseEntity<>(response, HttpStatus.OK);
     }
 
     public OrderHistory save(OrderHistory newOrder) {
@@ -429,5 +502,278 @@ public class OrderHistoryService {
         whatsappService.sendPaymentLink(ownerName, ownerMobile, paymentLink);
 
         return new ResponseEntity<>(HttpStatus.OK);
+    }
+
+    public ResponseEntity<?> uploadInvoice(Long orderHistoryId, MultipartFile invoice, Boolean isManual) {
+
+        Agent agent = agentService.findUserByUserId(authentication.getName());
+        if (agent == null) {
+            return new ResponseEntity<>(Utils.UN_AUTHORIZED, HttpStatus.UNAUTHORIZED);
+        }
+
+        if (!agentRolesService.checkPermission(agent.getRoleId(), ModuleId.Payments.getId(), Utils.PERMISSION_READ)) {
+            return new ResponseEntity<>(Utils.ACCESS_RESTRICTED, HttpStatus.FORBIDDEN);
+        }
+
+        OrderHistory orderHistory = orderHistoryRepository.findByHistoryIdAndIsActiveTrue(orderHistoryId);
+        if (orderHistory == null){
+            return new ResponseEntity<>(Utils.ORDER_HISTORY_NOT_FOUND, HttpStatus.BAD_REQUEST);
+        }
+
+        List<Subscription> subscriptions = subscriptionService.getSubscriptionByOrderId(orderHistoryId);
+        if (subscriptions.isEmpty()){
+            return new ResponseEntity<>(Utils.SUBSCRIPTION_NOT_FOUND, HttpStatus.BAD_REQUEST);
+        }
+
+        if (subscriptions.size() > 1){
+            return new ResponseEntity<>("Multiple subscription exists for this order", HttpStatus.BAD_REQUEST);
+        }
+
+        Subscription subscription = subscriptions.getFirst();
+        if (subscription == null){
+            return new ResponseEntity<>(Utils.SUBSCRIPTION_NOT_FOUND, HttpStatus.BAD_REQUEST);
+        }
+
+        if (subscription.getInvoiceUrl() != null){
+            return new ResponseEntity<>("Invoice already exists, delete first", HttpStatus.BAD_REQUEST);
+        }
+
+        SubscriptionSnapshot oldSnapshot = SnapshotUtility.toSnapshot(subscription);
+
+        String invoiceUrl = null;
+        try {
+            invoiceUrl = uploadFileToS3.uploadFileToS3(
+                    FilesConfig.convertMultipartToFileNew(invoice), "subscriptions");
+        } catch (Exception e) {
+            return new ResponseEntity<>(Utils.FILE_UPLOAD_FAILED, HttpStatus.BAD_REQUEST);
+        }
+
+        if (isManual == null){
+            isManual = true;
+        }
+
+        String generationType = null;
+        if (isManual){
+            generationType = GenerationType.MANUAL.name();
+        } else {
+            generationType = GenerationType.AUTOMATIC.name();
+        }
+
+        subscription.setInvoiceUrl(invoiceUrl);
+        subscription.setGenerationType(generationType);
+
+        subscription = subscriptionService.save(subscription);
+
+        SubscriptionSnapshot newSnapshot = SnapshotUtility.toSnapshot(subscription);
+
+        agentActivitiesService.createAgentActivity(agent, ActivityType.UPDATE, Source.SUBSCRIPTION_INVOICE_URL,
+                String.valueOf(subscription.getSubscriptionId()), oldSnapshot, newSnapshot);
+
+        return new ResponseEntity<>(Utils.FILE_UPLOAD_SUCCESS, HttpStatus.OK);
+    }
+
+    public ResponseEntity<?> deleteInvoice(Long orderHistoryId)  {
+
+        Agent agent = agentService.findUserByUserId(authentication.getName());
+        if (agent == null) {
+            return new ResponseEntity<>(Utils.UN_AUTHORIZED, HttpStatus.UNAUTHORIZED);
+        }
+
+        if (!agentRolesService.checkPermission(agent.getRoleId(), ModuleId.Payments.getId(), Utils.PERMISSION_READ)) {
+            return new ResponseEntity<>(Utils.ACCESS_RESTRICTED, HttpStatus.FORBIDDEN);
+        }
+
+        OrderHistory orderHistory = orderHistoryRepository.findByHistoryIdAndIsActiveTrue(orderHistoryId);
+        if (orderHistory == null){
+            return new ResponseEntity<>(Utils.ORDER_HISTORY_NOT_FOUND, HttpStatus.BAD_REQUEST);
+        }
+
+        List<Subscription> subscriptions = subscriptionService.getSubscriptionByOrderId(orderHistoryId);
+        if (subscriptions.isEmpty()){
+            return new ResponseEntity<>(Utils.SUBSCRIPTION_NOT_FOUND, HttpStatus.BAD_REQUEST);
+        }
+
+        if (subscriptions.size() > 1){
+            return new ResponseEntity<>("Multiple subscription exists for this order", HttpStatus.BAD_REQUEST);
+        }
+
+        Subscription subscription = subscriptions.getFirst();
+        if (subscription == null){
+            return new ResponseEntity<>(Utils.SUBSCRIPTION_NOT_FOUND, HttpStatus.BAD_REQUEST);
+        }
+
+        if (subscription.getInvoiceUrl() == null){
+            return new ResponseEntity<>(Utils.SUBSCRIPTION_INVOICE_URL_NOT_FOUND, HttpStatus.BAD_REQUEST);
+        }
+
+        if (GenerationType.MANUAL.name().equals(subscription.getGenerationType())){
+            return new ResponseEntity<>("Manual invoice can not be deleted", HttpStatus.BAD_REQUEST);
+        }
+
+        SubscriptionSnapshot oldSnapshot = SnapshotUtility.toSnapshot(subscription);
+
+        try {
+            s3Service.deleteFile(subscription.getInvoiceUrl());
+        } catch (Exception e) {
+//            return new ResponseEntity<>("Failed to delete invoice file from S3",
+//                    HttpStatus.INTERNAL_SERVER_ERROR);
+        }
+
+        subscription.setInvoiceUrl(null);
+
+        subscription = subscriptionService.save(subscription);
+
+        agentActivitiesService.createAgentActivity(agent, ActivityType.DELETE, Source.SUBSCRIPTION_INVOICE_URL,
+                String.valueOf(subscription.getSubscriptionId()), oldSnapshot, null);
+
+        return new ResponseEntity<>(Utils.DELETED, HttpStatus.OK);
+    }
+
+    public ResponseEntity<?> downloadInvoice(Long orderHistoryId) {
+
+        Agent agent = agentService.findUserByUserId(authentication.getName());
+
+        if (agent == null) {
+            return new ResponseEntity<>(Utils.UN_AUTHORIZED, HttpStatus.UNAUTHORIZED);
+        }
+
+        if (!agentRolesService.checkPermission(agent.getRoleId(), ModuleId.Payments.getId(), Utils.PERMISSION_READ)) {
+            return new ResponseEntity<>(Utils.ACCESS_RESTRICTED, HttpStatus.FORBIDDEN);
+        }
+
+        OrderHistory orderHistory = orderHistoryRepository
+                .findByHistoryIdAndIsActiveTrue(orderHistoryId);
+        if (orderHistory == null) {
+            return new ResponseEntity<>(Utils.ORDER_HISTORY_NOT_FOUND, HttpStatus.BAD_REQUEST);
+        }
+
+        List<Subscription> subscriptions = subscriptionService
+                .getSubscriptionByOrderId(orderHistoryId);
+        if (subscriptions.isEmpty()) {
+            return new ResponseEntity<>(Utils.SUBSCRIPTION_NOT_FOUND, HttpStatus.BAD_REQUEST);
+        }
+
+        if (subscriptions.size() > 1) {
+            return new ResponseEntity<>("Multiple subscription exists for this order",
+                    HttpStatus.BAD_REQUEST);
+        }
+
+        Subscription subscription = subscriptions.getFirst();
+        if (subscription == null){
+            return new ResponseEntity<>(Utils.SUBSCRIPTION_NOT_FOUND, HttpStatus.BAD_REQUEST);
+        }
+
+        if (subscription.getInvoiceUrl() == null) {
+            return new ResponseEntity<>(Utils.SUBSCRIPTION_INVOICE_URL_NOT_FOUND, HttpStatus.BAD_REQUEST);
+        }
+
+        try {
+
+            FileData fileData;
+            try {
+                fileData = s3Service.downloadFile(subscription.getInvoiceUrl());
+            } catch (Exception e) {
+                fileData = FilesConfig.downloadFileFromUrl(subscription.getInvoiceUrl());
+            }
+
+            MediaType mediaType;
+
+            try {
+                mediaType = MediaType.parseMediaType(fileData.contentType());
+            } catch (Exception e) {
+                mediaType = MediaType.APPLICATION_OCTET_STREAM;
+            }
+
+            HttpHeaders headers = new HttpHeaders();
+
+            headers.setContentType(mediaType);
+
+            headers.setContentDisposition(ContentDisposition.attachment()
+                            .filename(fileData.fileName())
+                            .build());
+
+            headers.setContentLength(fileData.content().length);
+
+            return new ResponseEntity<>(fileData.content(), headers, HttpStatus.OK);
+
+        } catch (Exception e) {
+            return new ResponseEntity<>("Failed to download invoice",
+                    HttpStatus.INTERNAL_SERVER_ERROR);
+        }
+    }
+
+    public ResponseEntity<?> exportInvoicePdf(Long orderHistoryId) {
+
+        Agent agent = agentService.findUserByUserId(authentication.getName());
+
+        if (agent == null) {
+            return new ResponseEntity<>(Utils.UN_AUTHORIZED, HttpStatus.UNAUTHORIZED);
+        }
+
+        if (!agentRolesService.checkPermission(agent.getRoleId(), ModuleId.Payments.getId(), Utils.PERMISSION_READ)) {
+            return new ResponseEntity<>(Utils.ACCESS_RESTRICTED, HttpStatus.FORBIDDEN);
+        }
+
+        OrderHistory orderHistory = orderHistoryRepository
+                .findByHistoryIdAndIsActiveTrue(orderHistoryId);
+        if (orderHistory == null) {
+            return new ResponseEntity<>(Utils.ORDER_HISTORY_NOT_FOUND, HttpStatus.BAD_REQUEST);
+        }
+
+        List<Subscription> subscriptions = subscriptionService
+                .getSubscriptionByOrderId(orderHistoryId);
+        if (subscriptions.isEmpty()) {
+            return new ResponseEntity<>(Utils.SUBSCRIPTION_NOT_FOUND, HttpStatus.BAD_REQUEST);
+        }
+
+        if (subscriptions.size() > 1) {
+            return new ResponseEntity<>("Multiple subscription exists for this order",
+                    HttpStatus.BAD_REQUEST);
+        }
+
+        Subscription subscription = subscriptions.getFirst();
+        if (subscription == null){
+            return new ResponseEntity<>(Utils.SUBSCRIPTION_NOT_FOUND, HttpStatus.BAD_REQUEST);
+        }
+
+        if (subscription.getInvoiceUrl() == null) {
+            return new ResponseEntity<>(Utils.SUBSCRIPTION_INVOICE_URL_NOT_FOUND, HttpStatus.BAD_REQUEST);
+        }
+
+        try {
+
+            FileData fileData;
+            try {
+                fileData = s3Service.downloadFile(subscription.getInvoiceUrl());
+            } catch (Exception e) {
+                fileData = FilesConfig.downloadFileFromUrl(subscription.getInvoiceUrl());
+            }
+
+            byte[] pdfBytes;
+            if ("application/pdf".equalsIgnoreCase(fileData.contentType())) {
+                pdfBytes = fileData.content();
+            } else {
+                pdfBytes = pdfService.convertToPdf(fileData.content(),
+                        fileData.contentType(), fileData.fileName());
+            }
+
+            HttpHeaders headers = new HttpHeaders();
+
+            headers.setContentType(MediaType.APPLICATION_PDF);
+
+            headers.setContentDisposition(ContentDisposition.attachment()
+                    .filename(pdfService
+                            .getFileNameWithoutExtension(fileData.fileName())
+                            + ".pdf")
+                    .build());
+
+            headers.setContentLength(pdfBytes.length);
+
+            return new ResponseEntity<>(pdfBytes, headers, HttpStatus.OK);
+
+        } catch (Exception e) {
+            return new ResponseEntity<>("Failed to export invoice",
+                    HttpStatus.INTERNAL_SERVER_ERROR);
+        }
     }
 }
